--- a/com.HealthCare.Modules/test-output/index.html
+++ b/com.HealthCare.Modules/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Suite">
-                    <span>C:\Users\Suuresh\eclipse-workspace\com.HealthCare.Modules\testng.xml</span>
+                    <span>C:\Users\Suuresh\git\DemoProject-Sept27\com.HealthCare.Modules\testng.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -136,7 +136,7 @@
         </div> <!-- panel Suite -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Suuresh\eclipse-workspace\com.HealthCare.Modules\testng.xml</span>
+            <span class="header-content">C:\Users\Suuresh\git\DemoProject-Sept27\com.HealthCare.Modules\testng.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -191,12 +191,12 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'login')
 data.setCell(0, 2, 'com.HealthCare.Registration.TempRegistration')
-data.setCell(0, 3, 9745);
+data.setCell(0, 3, 648);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 9 seconds</span>
+              <span class="suite-total-time">Total running time: 648 ms</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -229,23 +229,23 @@ return data;
               </div> <!-- configuration-test before -->
               <div class="configuration-class before">
                 <span class="method-name">launchApplication(chrome, hms)</span>
-                <span class="method-start">371 ms</span>
+                <span class="method-start">774 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">login({UserName=admin, Password=admin})</span>
-                <span class="method-start">89127 ms</span>
+                <span class="method-start">8100 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">verifyResult([TestResult name=login status=SUCCESS method=TempRegistration.login(java.util.Map)[pri:0, instance:c...)</span>
-                <span class="method-start">98875 ms</span>
+                <span class="method-start">8751 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-class after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">98877 ms</span>
+                <span class="method-start">8752 ms</span>
               </div> <!-- configuration-class after -->
               <div class="configuration-test after">
                 <span class="method-name">endReport</span>
-                <span class="method-start">98977 ms</span>
+                <span class="method-start">8930 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
