--- a/com.HealthCare.Modules/test-output/old/Suite/methods-alphabetical.html
+++ b/com.HealthCare.Modules/test-output/old/Suite/methods-alphabetical.html
@@ -1,16 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bc60a9">  <td>18/09/18 09:45:03</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;Reports.endReport()[pri:0, instance:com.HealthCare.Registration.TempRegistration@2df3b89c]">&lt;&lt;endReport</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2063763486</td>   <td></td> </tr>
-<tr bgcolor="71beb3">  <td>18/09/18 09:43:24</td>   <td>-98597</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;GenericMethods.launchApplication(java.lang.String, java.lang.String)[pri:0, instance:com.HealthCare.Registration.TempRegistration@2df3b89c]">&gt;&gt;launchApplication</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2063763486</td>   <td></td> </tr>
-<tr bgcolor="b894f2">  <td>18/09/18 09:44:53</td>   <td>-9851</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TempRegistration.login(java.util.Map)[pri:0, instance:com.HealthCare.Registration.TempRegistration@2df3b89c]">login</td> 
-  <td>main@2063763486</td>   <td></td> </tr>
-<tr bgcolor="bc60a9">  <td>18/09/18 09:43:24</td>   <td>-98965</td> <td>&nbsp;</td><td title="&gt;&gt;Reports.startReport()[pri:0, instance:com.HealthCare.Registration.TempRegistration@2df3b89c]">&gt;&gt;startReport</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2063763486</td>   <td></td> </tr>
-<tr bgcolor="71beb3">  <td>18/09/18 09:45:03</td>   <td>-99</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;GenericMethods.tearDown()[pri:0, instance:com.HealthCare.Registration.TempRegistration@2df3b89c]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2063763486</td>   <td></td> </tr>
-<tr bgcolor="71beb3">  <td>18/09/18 09:45:03</td>   <td>-100</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;GenericMethods.verifyResult(org.testng.ITestResult)[pri:0, instance:com.HealthCare.Registration.TempRegistration@2df3b89c]">&lt;&lt;verifyResult</td> 
-<td>&nbsp;</td>  <td>main@2063763486</td>   <td></td> </tr>
+<tr bgcolor="91936c">  <td>18/10/01 08:38:15</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;Reports.endReport()[pri:0, instance:com.HealthCare.Registration.TempRegistration@8e24743]">&lt;&lt;endReport</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@789219251</td>   <td></td> </tr>
+<tr bgcolor="b3b3e6">  <td>18/10/01 08:38:07</td>   <td>-8147</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;GenericMethods.launchApplication(java.lang.String, java.lang.String)[pri:0, instance:com.HealthCare.Registration.TempRegistration@8e24743]">&gt;&gt;launchApplication</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@789219251</td>   <td></td> </tr>
+<tr bgcolor="76b367">  <td>18/10/01 08:38:14</td>   <td>-830</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TempRegistration.login(java.util.Map)[pri:0, instance:com.HealthCare.Registration.TempRegistration@8e24743]">login</td> 
+  <td>main@789219251</td>   <td></td> </tr>
+<tr bgcolor="91936c">  <td>18/10/01 08:38:06</td>   <td>-8908</td> <td>&nbsp;</td><td title="&gt;&gt;Reports.startReport()[pri:0, instance:com.HealthCare.Registration.TempRegistration@8e24743]">&gt;&gt;startReport</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@789219251</td>   <td></td> </tr>
+<tr bgcolor="b3b3e6">  <td>18/10/01 08:38:15</td>   <td>-177</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;GenericMethods.tearDown()[pri:0, instance:com.HealthCare.Registration.TempRegistration@8e24743]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@789219251</td>   <td></td> </tr>
+<tr bgcolor="b3b3e6">  <td>18/10/01 08:38:15</td>   <td>-178</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;GenericMethods.verifyResult(org.testng.ITestResult)[pri:0, instance:com.HealthCare.Registration.TempRegistration@8e24743]">&lt;&lt;verifyResult</td> 
+<td>&nbsp;</td>  <td>main@789219251</td>   <td></td> </tr>
 </table>
